# temporary-mcp-servers

./: .gitignore  .mcp.json  README.md  discord-mcp.py  ipython-mcp.py  pyproject.toml  webview-mcp.py
.github/: renovate.json
webview-mcp/: Cargo.toml  pyproject.toml  rustfmt.toml
webview-mcp/src/: main.rs
